@@ -4,6 +4,11 @@
 
 const { URL } = require('url')
 
+// Getting handles on these `.request()` functions at the top-level ensures
+// that we have *un*instrumented functions for internal HTTP request usage.
+const coreHttpRequest = require('http').request
+const coreHttpsRequest = require('https').request
+
 // From https://github.com/nodejs/node/blob/v14.15.4/lib/internal/url.js#L1267-L1289
 // for node v8 support.
 //
@@ -104,16 +109,16 @@ function httpRequest (url, opts, cb) {
   const mergedOpts = Object.assign(urlToOptions(u), otherOpts)
 
   // http or https
-  let proto
+  let requestFn
   if (mergedOpts.protocol === 'http:') {
-    proto = require('http')
+    requestFn = coreHttpRequest
   } else if (mergedOpts.protocol === 'https:') {
-    proto = require('https')
+    requestFn = coreHttpsRequest
   } else {
     throw new Error(`unsupported protocol: "${mergedOpts.protocol}"`)
   }
 
-  const req = proto.request(mergedOpts, cb)
+  const req = requestFn(mergedOpts, cb)
 
   if (connectTimeout) {
     // Handle a connection timeout with a timer starting when the request
