@@ -128,9 +128,8 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
 
   return function (orig) {
     return function (...args) {
-      // TODO: See if we can delay the creation of span until the `response`
-      // event is fired, while still having it have the correct stack trace
-      var span = agent.startSpan(null, 'external', 'http')
+      const parentRunContext = ins.currRunContext()
+      var span = ins.createSpan(null, 'external', 'http')
       var id = span && span.transaction.id
 
       agent.logger.debug('intercepted call to %s.%s %o', moduleName, method, { id: id })
@@ -139,7 +138,7 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
       var newArgs = [options]
       for (const arg of args) {
         if (typeof arg === 'function') {
-          newArgs.push(arg)
+          newArgs.push(ins.bindFunctionToRunContext(parentRunContext, arg))
         } else {
           Object.assign(options, ensureUrl(arg))
         }
@@ -170,8 +169,12 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
         options.headers = newHeaders
       }
 
-      var req = orig.apply(this, newArgs)
-      if (!span) return req
+      if (!span) {
+        return orig.apply(this, newArgs)
+      }
+
+      const spanRunContext = parentRunContext.enterSpan(span)
+      var req = ins.withRunContext(spanRunContext, orig, this, ...newArgs)
 
       var protocol = req.agent && req.agent.protocol
       agent.logger.debug('request details: %o', { protocol: protocol, host: getSafeHost(req), id: id })
@@ -186,7 +189,7 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
       // is added instead of when `response` is emitted.
       const emit = req.emit
       req.emit = function wrappedEmit (type, res) {
-        if (type === 'response') onresponse(res)
+        if (type === 'response') onResponse(res)
         if (type === 'abort') onAbort(type)
         return emit.apply(req, arguments)
       }
@@ -231,9 +234,9 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
         span.end()
       }
 
-      function onresponse (res) {
+      function onResponse (res) {
         agent.logger.debug('intercepted http.ClientRequest response event %o', { id: id })
-        ins.bindEmitter(res)
+        ins.bindEmitterToRunContext(parentRunContext, res)
         statusCode = res.statusCode
         res.prependListener('end', function () {
           agent.logger.debug('intercepted http.IncomingMessage end event %o', { id: id })
